# rusty-tokey

./: CLAUDE.md  Cargo.toml  README.md  flake.nix  pyproject.toml  test.py
.direnv/: flake-profile-2-link
python/rusty_tokey/: __init__.py  py.typed  rlly_serious.py  rusty_tokey.pyi  serious.py
python/rusty_tokey/tests/: adapters.py  serious.py  test_train_bpe.py
src/: lib.rs
