[package]
name = "rusty-tokey"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rusty_tokey"
crate-type = ["cdylib"]

[dependencies]
once_cell = "1.21.3"
rand = "0.9.0"
regex = "1.11.1"

[dependencies.pyo3]
version = "0.25.0"
# "abi3-py38" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.8
features = ["abi3-py38"]
