[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "rusty-tokey"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "jaxtyping>=0.2.19",
    "maturin>=1.8.7",
    "numpy>=1.24.4",
    "pytest>=8.3.5",
    "regex>=2024.11.6",
    "torch>=2.5.1",
]
[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
